Effet Matilda CSS

--- a/fr/effet-matilda.html
+++ b/fr/effet-matilda.html
@@ -66,13 +66,13 @@
         </section>
 
         <section class="article-section">
-            <h2 class="section-title">Qu'est-ce que l'Effet Matilda</h2>
+            <h2 class="article-title">Qu'est-ce que l'Effet Matilda</h2>
 
             <p>
                 L’effet Matilda désigne un biais systématique par lequel les contributions des femmes scientifiques sont déniées ou minimisées, leurs travaux étant souvent attribués à des collègues masculins. Ce phénomène a été formalisé par l’historienne des sciences Margaret W. Rossiter en 1993, qui a voulu mettre en lumière une injustice persistante dans le monde scientifique. Le nom rend hommage à Matilda Joslyn Gage, une militante américaine pour le droit de vote des femmes et abolitionniste, qui avait déjà identifié ce type de biais dès 1870.
             </p>
 
-            <img src="/assets/img/matilda.avif" class="card-image" loading="lazy" />
+            <img src="/assets/img/matilda.avif" class="article-image" loading="lazy" />
 
             <p>
                 Dans son essai Woman as Inventor, publié cette année-là, Matilda Joslyn Gage écrivait : « Les inventions et découvertes des femmes ont été si nombreuses et importantes, et pourtant, dans presque chaque cas, elles ont été attribuées à des hommes. » Son constat, formulé il y a plus d’un siècle, reste frappant par sa pertinence encore aujourd’hui, illustrant la difficulté pour les femmes d’obtenir une reconnaissance égale dans des domaines scientifiques et techniques.
@@ -109,28 +109,30 @@
         </section>
 
         <section class="content">
-            <h2 class="section-title">Exemples Notables</h2>
+            <h2 class="content-title">Exemples Notables</h2>
 
-            <p>
+            <p class="content-description">
                 Sur les plus de 900 prix Nobel scientifiques décernés depuis 1901, moins de 4% ont été attribués à des femmes. Parmi ces rares lauréates, plusieurs cas documentés montrent que d'autres femmes scientifiques ont été exclues alors que leurs contributions étaient essentielles à la découverte récompensée.
             </p>
         </section>
 
         <section class="other-articles">
-            <h3 class="section-title">Lire aussi</h3>
+            <hr>
+            <h3 class="other-articles-title">Lire aussi</h3>
 
-            <a href="/fr/article.html" class="cta-button">
-                Femme de Science dans la Littérature 
-                <img src="/assets/icons/fleche.svg" alt="" loading="lazy" />
+            <a href="/fr/film.html" class="other-articles-button">
+                Retour vers le Futur
+                <img src="/assets/icons/fleche.svg" alt="" aria-hidden="true" loading="lazy" />
             </a>
 
             <br>
 
-            <a href="/fr/histoire.html" class="cta-button">
-                Mileva Einstein : La Chercheuse 
-                <img src="/assets/icons/fleche.svg" alt="" loading="lazy" />
+            <a href="/fr/histoire.html" class="other-articles-button">
+                Mileva Einstein : La Chercheuse
+                <img src="/assets/icons/fleche.svg" alt="" aria-hidden="true" loading="lazy" />
             </a>
         </section>
+
     </main>
 
     <footer class="footer">
