--- a/fr/article.html
+++ b/fr/article.html
@@ -66,13 +66,13 @@
         </section>
 
         <section class="article-section">
-            <h2 class="section-title">Invisibilisation Littéraire</h2>
+            <h2 class="article-title">Invisibilisation Littéraire</h2>
 
             <p>
                 Pendant des siècles, la contribution des femmes à la science a été largement minimisée, voire totalement effacée des récits écrits. Cette invisibilisation ne concerne pas uniquement les publications académiques, mais s'étend aussi à la littérature populaire, aux manuels scolaires, aux biographies scientifiques et aux grands récits historiques qui façonnent la mémoire collective. En conséquence, l'histoire des sciences transmise au grand public a longtemps donné l'impression que les découvertes majeures étaient presque exclusivement l'œuvre d'hommes.
             </p>
 
-            <img src="/assets/img/matilda.avif" class="card-image" alt="Illustration de Matilda Joslyn Gage" loading="lazy" />
+            <img src="/assets/img/femme.avif" class="article-image" alt="Illustration de Matilda Joslyn Gage" loading="lazy" />
 
             <p>
                 Dans la littérature scientifique classique, les femmes sont rarement mentionnées comme actrices centrales de la recherche. Lorsqu'elles apparaissent, c'est souvent dans des rôles secondaires : assistantes de laboratoire, collaboratrices discrètes ou épouses de scientifiques reconnus. Leur contribution intellectuelle est alors présentée comme un soutien plutôt que comme un apport scientifique à part entière, même lorsque leur travail s'avère essentiel aux découvertes réalisées. Cette représentation biaisée contribue à renforcer l'idée que le génie scientifique serait majoritairement masculin.
@@ -90,13 +90,13 @@
                 Aujourd'hui, de nombreux chercheurs, historiens et auteurs s'attachent à corriger ces omissions en revisitant les archives, en publiant de nouvelles biographies et en intégrant davantage de figures féminines dans les programmes éducatifs. Cette relecture critique de la littérature scientifique et historique ne vise pas à réécrire l'histoire, mais à la rendre plus complète et plus fidèle à la réalité des contributions scientifiques, en reconnaissant enfin la place essentielle qu'ont occupée les femmes dans le développement des savoirs.
             </p>
 
-            <h2 class="section-title">Les Mécanismes de l'Effacement</h2>
+            <h2 class="article-title">Les Mécanismes de l'Effacement</h2>
 
             <p>
                 L'effacement des femmes scientifiques de la littérature et de l'histoire des sciences ne relève pas du hasard, mais repose sur plusieurs mécanismes systématiques, ancrés dans des pratiques institutionnelles, culturelles et sociales de longue date. Ces mécanismes ont contribué à invisibiliser leurs travaux et à minimiser leur rôle dans les grandes avancées scientifiques.
             </p>
 
-            <img src="/assets/img/zurich.avif" class="card-image" alt="Photographie de Zurich" loading="lazy" />
+            <img src="/assets/img/litterature.avif" class="article-image" alt="Photographie de Zurich" loading="lazy" />
 
             <p>
                 Le premier de ces mécanismes consiste en l'attribution des contributions féminines à des collègues masculins, en particulier à leurs maris, directeurs de recherche ou collaborateurs hiérarchiquement dominants. Ce phénomène est aujourd'hui désigné sous le nom d'« effet Matilda », en référence à Matilda Joslyn Gage, qui avait identifié ce biais dès 1870. Dans de nombreux cas, les travaux des femmes sont publiés sous un nom masculin ou présentés comme le résultat d'un travail collectif dont seul l'homme reçoit le mérite. Cette pratique a longtemps été facilitée par l'exclusion des femmes des postes académiques officiels et des sociétés savantes.
@@ -115,37 +115,39 @@
             </p>
         </section>
 
-        <section class="content">
-            <h2 class="section-title">Frise chronologique</h2>
+        <section class="timeline">
+            <h2 class="content-title">Frise chronologique</h2>
 
-            <p>Des femmes scientifiques dont les contributions ont été attribuées à des hommes</p>
+            <p class="content-description">
+                Des femmes scientifiques dont les contributions ont été attribuées à des hommes
+            </p>
 
             <div class="timeline-container">
-                <h3 class="card-title">Mileva Einstein</h3>
+                <h3 class="timeline-title">Mileva Einstein</h3>
                 <div class="timeline-item">
                     <span class="timeline-year">Physique théorique - 1905</span>
                     <p class="timeline-description">Relativité restreinte</p>
                 </div>
 
-                <h3 class="card-title">Lise Meitner</h3>
+                <h3 class="timeline-title">Lise Meitner</h3>
                 <div class="timeline-item">
                     <span class="timeline-year">Physique nucléaire - 1938</span>
                     <p class="timeline-description">Fission nucléaire</p>
                 </div>
 
-                <h3 class="card-title">Rosalind Franklin</h3>
+                <h3 class="timeline-title">Rosalind Franklin</h3>
                 <div class="timeline-item">
                     <span class="timeline-year">Cristallographie - 1952</span>
                     <p class="timeline-description">Structure de l'ADN</p>
                 </div>
 
-                <h3 class="card-title">Chien-Shiung Wu</h3>
+                <h3 class="timeline-title">Chien-Shiung Wu</h3>
                 <div class="timeline-item">
                     <span class="timeline-year">Physique expérimentale - 1956</span>
                     <p class="timeline-description">Parité en physique</p>
                 </div>
 
-                <h3 class="card-title">Jocelyn Bell Burnell</h3>
+                <h3 class="timeline-title">Jocelyn Bell Burnell</h3>
                 <div class="timeline-item">
                     <span class="timeline-year">Astrophysique - 1967</span>
                     <p class="timeline-description">Pulsars</p>
@@ -154,20 +156,22 @@
         </section>
 
         <section class="other-articles">
-            <h3 class="section-title">Lire aussi</h3>
+            <hr>
+            <h3 class="other-articles-title">Lire aussi</h3>
 
-            <a href="/fr/histoire.html" class="cta-button">
-                Mileva Einstein : La Chercheuse
+            <a href="/fr/effet-matilda.html" class="other-articles-button">
+                L'Effet Matilda
                 <img src="/assets/icons/fleche.svg" alt="" aria-hidden="true" loading="lazy" />
             </a>
 
             <br>
 
-            <a href="/fr/effet-matilda.html" class="cta-button">
-                L'Effet Matilda
+            <a href="/fr/livre.html" class="other-articles-button">
+                Espace-Temps, Jean-Paul Auffray
                 <img src="/assets/icons/fleche.svg" alt="" aria-hidden="true" loading="lazy" />
             </a>
         </section>
+
     </main>
 
     <footer class="footer">
