--- a/fr/theorie.html
+++ b/fr/theorie.html
@@ -66,7 +66,7 @@
         </section>
 
         <section class="article-section">
-            <h2 class="section-title">Le Rôle de Mileva dans la Théorie</h2>
+            <h2 class="article-title">Le Rôle de Mileva dans la Théorie</h2>
             <p>
                 Le rôle exact de Mileva Marić Einstein dans le développement de la théorie de la relativité restreinte demeure aujourd’hui un sujet de débat parmi les historiens des sciences. L’absence de documents conclusifs, tels que des manuscrits signés conjointement ou des publications officielles à son nom, rend toute affirmation définitive difficile. Néanmoins, plusieurs éléments historiques et contextuels suggèrent que Mileva a joué un rôle plus important que celui qui lui a été traditionnellement attribué, en particulier dans les aspects mathématiques complexes de la théorie.
             </p>
@@ -84,46 +84,60 @@
             </p>
         </section>
 
-        <section class="content">
-            <h2 class="section-title">Physique Théorique</h2>
-            <p>Les contributions de Mileva Einstein à la relativité restreinte témoignent d'une maîtrise exceptionnelle des mathématiques complexes nécessaires à l'unification de l'espace et du temps.</p>
+        <section class="physics-theory">
+            <h2 class="content-title">Physique Théorique</h2>
+            <p class="physics-description">Les contributions de Mileva Einstein à la relativité restreinte témoignent d'une maîtrise exceptionnelle des mathématiques complexes nécessaires à l'unification de l'espace et du temps.</p>
 
             <div class="cards-container">
-                <img src="/assets/icons/Clock.svg" alt="card-image" loading="lazy" />
-                <h3 class="card-title">Espace-Temps</h3>
-                <p>ds² = c²dt² - dx² - dy² - dz² <br>La fusion révolutionnaire de l'espace et du temps en une seule entité mathématique.</p>
+                <div class="card">
+                    <img src="/assets/icons/Clock.svg" alt="" loading="lazy" />
+                    <h3 class="card-title">Espace-Temps</h3>
+                    <p>
+                        ds² = c²dt² - dx² - dy² - dz² 
+                        <br>
+                        La fusion révolutionnaire de l'espace et du temps en une seule entité mathématique.
+                    </p>
+                </div>
             </div>
 
             <div class="cards-container">
-                <img src="/assets/icons/Lightning.svg" alt="card-image" loading="lazy" />
-                <h3 class="card-title">Vitesse de la Lumière</h3>
-                <p>
-                    c = 299,792,458 m/s <br>
-                    La constante universelle qui relie l'énergie et la matière.
-                </p>
+                <div class="card">
+                    <img src="/assets/icons/Lightning.svg" alt="" loading="lazy" />
+                    <h3 class="card-title">Vitesse de la Lumière</h3>
+                    <p>
+                        c = 299,792,458 m/s  
+                        <br>
+                        La constante universelle qui relie l'énergie et la matière.
+                    </p>
+                </div>
             </div>
 
-            <img src="/assets/img/vitessedelalumiere.avif" class="card-image" loading="lazy" />
+            <img src="/assets/img/vitessedelalumière.avif" class="article-image" loading="lazy" />
 
             <div class="cards-container">
-                <img src="/assets/icons/Science_Line.svg" alt="card-image" loading="lazy" />
-                <h3 class="card-title">Relativité Restreinte</h3>
-                <p>
-                    E = mc² <br>
-                    L'équation qui a changé notre compréhension de l'univers.
-                </p>
+                <div class="card">
+                    <img src="/assets/icons/Science_Line.svg" alt="" loading="lazy" />
+                    <h3 class="card-title">Relativité Restreinte</h3>
+                    <p>
+                        E = mc²  
+                        <br>
+                        L'équation qui a changé notre compréhension de l'univers.
+                    </p>
+                </div>
             </div>
 
             <div class="cards-container">
-                <img src="/assets/icons/Science_Line.svg" alt="card-image" loading="lazy" />
-                <h3 class="card-title">Les Transformations de Lorentz</h3>
-                <p>Équations mathématiques fondamentales de la relativité restreinte :</p>
-                <ul>
-                    <li>x' = γ(x - vt)</li>
-                    <li>t' = γ(t - vx/c²)</li>
-                    <li>où γ = 1/√(1 - v²/c²)</li>
-                </ul>
-                <p>Ces équations nécessitaient une maîtrise exceptionnelle des mathématiques, domaine dans lequel Mileva excellait.</p>
+                <div class="card">
+                    <img src="/assets/icons/Science_Line.svg" alt="" loading="lazy" />
+                    <h3 class="card-title">Les Transformations de Lorentz</h3>
+                    <p>Équations mathématiques fondamentales de la relativité restreinte :</p>
+                    <ul class="card-list">
+                        <li>x' = γ(x - vt)</li>
+                        <li>t' = γ(t - vx/c²)</li>
+                        <li>où γ = 1/√(1 - v²/c²)</li>
+                    </ul>
+                    <p>Ces équations nécessitaient une maîtrise exceptionnelle des mathématiques, domaine dans lequel Mileva excellait.</p>
+                </div>
             </div>
         </section>
     </main>
