--- a/fr/livre.html
+++ b/fr/livre.html
@@ -62,44 +62,63 @@
         </div>
 
         <section class="introduction" aria-labelledby="titre-livre">
-            <h1 id="titre-livre" class="title">L'Espace-Temps</h1>
+            <h1 class="title">L'Espace-Temps</h1>
             <p class="description">Jean-Paul Auffray</p>
         </section>
 
         <section class="article-section" aria-labelledby="section-apropos">
-            <h2 id="section-apropos" class="section-title">À Propos de l'Ouvrage</h2>
+            <h2 class="article-title">À Propos de l'Ouvrage</h2>
             <p>L'ouvrage de Jean-Paul Auffray offre une vulgarisation magistrale des concepts d'espace-temps qui ont révolutionné la physique au début du XXe siècle. Alliant rigueur scientifique et clarté pédagogique, l'auteur dévoile les mystères de la relativité restreinte et générale.</p>
             <img src="/assets/img/livre.avif" class="card-image" alt="Couverture du livre L'Espace-Temps de Jean-Paul Auffray" loading="lazy" />
             <p>Ce livre s'adresse aussi bien aux étudiants en physique qu'aux curieux passionnés par les grandes questions de l'univers. Il permet de comprendre comment l'espace et le temps, autrefois considérés comme des entités séparées et absolues, ont été réunis en une seule structure mathématique.</p>
 
-            <h2 class="section-title" id="extrait-ouvrage">Extrait de l'Ouvrage</h2>
-            <div class="cards-container" aria-labelledby="extrait-ouvrage">
-                <p>“La relativité restreinte repose sur deux postulats fondamentaux qui ont des conséquences extraordinaires : l'espace et le temps ne sont pas des entités absolues et indépendantes, mais forment un continuum quadridimensionnel, l'espace-temps.<br>
-                Pour établir mathématiquement cette nouvelle vision, il fallut développer les transformations de Lorentz. Ces équations montrent que le temps se dilate et les longueurs se contractent pour un observateur en mouvement relatif. Le facteur de Lorentz, γ = 1/√(1 - v²/c²), apparaît dans toutes ces transformations et joue un rôle central.<br>
-                Ces calculs mathématiques, d'une complexité redoutable, nécessitaient une maîtrise exceptionnelle de l'analyse mathématique et de la géométrie. Chaque étape devait être vérifiée avec une rigueur absolue, car la moindre erreur dans ces longues chaînes de raisonnement pouvait invalider l'ensemble de la théorie.”</p>
-                <p class="citation">Jean-Paul Auffray, L'Espace-Temps, p. 45-47</p>
+            <div class="cards-container">
+                <div class="card">
+                    <p>
+                        “La relativité restreinte repose sur deux postulats fondamentaux qui ont des conséquences extraordinaires : l'espace et le temps ne sont pas des entités absolues et indépendantes, mais forment un continuum quadridimensionnel, l'espace-temps.
+                    </p>
+                    <p>
+                        Pour établir mathématiquement cette nouvelle vision, il fallut développer les transformations de Lorentz. Ces équations montrent que le temps se dilate et les longueurs se contractent pour un observateur en mouvement relatif. Le facteur de Lorentz, γ = 1/√(1 - v²/c²), apparaît dans toutes ces transformations et joue un rôle central.
+                    </p>
+                    <p>
+                        Ces calculs mathématiques, d'une complexité redoutable, nécessitaient une maîtrise exceptionnelle de l'analyse mathématique et de la géométrie. Chaque étape devait être vérifiée avec une rigueur absolue, car la moindre erreur dans ces longues chaînes de raisonnement pouvait invalider l'ensemble de la théorie.”
+                    </p>
+                    <span class="citation">Jean-Paul Auffray, L'Espace-Temps, p. 45-47</span>
+                </div>
             </div>
         </section>
 
-        <section class="content" aria-labelledby="section-mileva">
-            <h2 id="section-mileva" class="section-title">Le Lien avec Mileva Einstein</h2>
-            <p>Comment cet ouvrage éclaire les contributions de Mileva.</p>
+        <section class="physics-theory" aria-labelledby="section-mileva">
+            <h2 id="section-mileva" class="content-title">Le Lien avec Mileva Einstein</h2>
+            <p class="physics-description">Comment cet ouvrage éclaire les contributions de Mileva.</p>
 
-            <div class="cards-container" aria-label="Lien entre Mileva Einstein et les mathématiques complexes">
-                <h3 class="card-title">Les Mathématiques Complexes</h3>
-                <p>L'ouvrage d'Auffray met en lumière la complexité mathématique derrière la relativité restreinte. Les transformations de Lorentz, les calculs tensoriels et les équations différentielles nécessitaient une maîtrise exceptionnelle des mathématiques - domaine dans lequel Mileva excellait.</p>
+            <div class="cards-container">
+                <div class="card">
+                    <h3 class="card-title">Les Mathématiques Complexes</h3>
+                    <p>
+                        L'ouvrage d'Auffray met en lumière la complexité mathématique derrière la relativité restreinte. Les transformations de Lorentz, les calculs tensoriels et les équations différentielles nécessitaient une maîtrise exceptionnelle des mathématiques - domaine dans lequel Mileva excellait.
+                    </p>
+                </div>
             </div>
 
-            <div class="cards-container" aria-label="Contexte collaboratif entre Albert et Mileva Einstein">
-                <h3 class="card-title">Le Contexte Collaboratif</h3>
-                <p>Auffray décrit le contexte scientifique du début du XXe siècle, où la collaboration entre physiciens était courante. Ce contexte historique aide à comprendre la dynamique de travail entre Albert et Mileva.</p>
+            <div class="cards-container">
+                <div class="card">
+                    <h3 class="card-title">Le Contexte Collaboratif</h3>
+                    <p>
+                        Auffray décrit le contexte scientifique du début du XXe siècle, où la collaboration entre physiciens était courante. Ce contexte historique aide à comprendre la dynamique de travail entre Albert et Mileva.
+                    </p>
+                </div>
             </div>
 
-            <div class="cards-container" aria-label="Rôle de Mileva dans la vérification des calculs">
-                <h3 class="card-title">La Vérification des Calculs</h3>
-                <p>L'ouvrage présente les nombreuses étapes de calculs qui ont conduit aux équations finales de la relativité. Mileva elle-même a affirmé : "J'ai vérifié tous les calculs mathématiques." En comprenant la densité de ces calculs grâce au livre d'Auffray, on mesure l'importance de cette contribution.</p>
+            <div class="cards-container">
+                <div class="card">
+                    <h3 class="card-title">La Vérification des Calculs</h3>
+                    <p>
+                        L'ouvrage présente les nombreuses étapes de calculs qui ont conduit aux équations finales de la relativité. Mileva elle-même a affirmé : "J'ai vérifié tous les calculs mathématiques." En comprenant la densité de ces calculs grâce au livre d'Auffray, on mesure l'importance de cette contribution.                    </p>
+                </div>
             </div>
         </section>
+        
     </main>
 
     <footer class="footer">
