--- a/fr/film.html
+++ b/fr/film.html
@@ -67,28 +67,27 @@
         </section>
 
         <section class="article-section">
-            <h2 class="section-title">Bande d'annonce</h2>
+            <h2 class="article-title">Bande d'annonce</h2>
             <div class="video-container">
                 <video id="myVideo" controls>
                     <source src="/assets/video/Bande-annonce.mp4" type="video/mp4" />
                 </video>
-                <img src="/assets/icons/Play_icon.svg" class="svg-overlay" alt="" />
             </div>
         </section>
 
-        <section class="content">
-            <h2 class="section-title">Retour vers le Futur et la science</h2>
-            <img src="/assets/img/voiture.avif" alt="Voiture du film Retour vers le Futur" class="content-image" loading="lazy" />
-            <p>
+        <section class="physics-theory">
+            <h2 class="content-title">Retour vers le Futur et la science</h2>
+            <img src="/assets/img/voiture.avif" alt="Voiture du film Retour vers le Futur" class="article-image" loading="lazy" />
+            <p class="physics-description">
                 "Retour vers le Futur" (1985) est devenu un film culte qui a introduit les concepts de voyage dans le temps, de paradoxes temporels et de relativité à des millions de spectateurs. Bien que romancé et simplifié, le film offre une excellente porte d'entrée pour discuter des vraies théories scientifiques.
             </p>
-            <p>
+            <p class="physics-description">
                 Le film peut être utilisé comme outil pédagogique pour aborder les travaux de physiciens comme Einstein, et par extension, pour évoquer le rôle méconnu de Mileva Marić Einstein dans le développement de la théorie de la relativité.
             </p>
         </section>
 
         <section class="article-section">
-            <h2 class="section-title">Analyse scientifique</h2>
+            <h2 class="article-title">Analyse scientifique</h2>
 
             <p>
                 "Retour vers le Futur" illustre brillamment les concepts de dilatation temporelle et de paradoxes causaux. La fameuse DeLorean atteignant 88 mph (141 km/h) fait référence à la vitesse nécessaire pour franchir une "barrière temporelle" imaginaire, un parallèle créatif avec la vitesse de la lumière en physique relativiste.
@@ -97,32 +96,32 @@
                 Le film soulève des questions fondamentales sur la nature du temps et de la causalité, thèmes centraux dans les travaux de Mileva Einstein sur la relativité restreinte.
             </p>
 
-            <h2 class="section-title">Films corrélés</h2>
+            <h2 class="article-title">Films corrélés</h2>
 
             <section class="carousel" aria-label="Carrousel tactile">
                 <div class="carousel-track">
-                    <article class="card">
-                        <img src="/assets/img/film1.avif" alt="Illustration carte 1" class="card-img" />
-                        <h3 class="card-title">Les figures de l’ombre</h3>
-                        <p class="card-text"><img src="/assets/icons/calendrier.svg">2016 - Theodore Melfi</p>
+                    <article class="carousel-card">
+                        <img src="/assets/img/film1.avif" alt="Illustration carte 1" class="illustration" />
+                        <h3 class="carousel-title">Les figures de l’ombre</h3>
+                        <p class="carousel-text"><img src="/assets/icons/calendrier.svg">2016 - Theodore Melfi</p>
                     </article>
 
-                    <article class="card">
-                        <img src="/assets/img/film2.avif" alt="Illustration carte 2" class="card-img" />
-                        <h3 class="card-title">Radioactive</h3>
-                        <p class="card-text"><img src="/assets/icons/calendrier.svg">2019 - Marjane Satrapi</p>
+                    <article class="carousel-card">
+                        <img src="/assets/img/film2.avif" alt="Illustration carte 2" class="illustration" />
+                        <h3 class="carousel-title">Radioactive</h3>
+                        <p class="carousel-text"><img src="/assets/icons/calendrier.svg">2019 - Marjane Satrapi</p>
                     </article>
 
-                    <article class="card">
-                        <img src="/assets/img/film3.avif" alt="Illustration carte 3" class="card-img" />
-                        <h3 class="card-title">Einstein & Eddington</h3>
-                        <p class="card-text"><img src="/assets/icons/calendrier.svg">2008 - Philip Martin</p>
+                    <article class="carousel-card">
+                        <img src="/assets/img/film3.avif" alt="Illustration carte 3" class="illustration" />
+                        <h3 class="carousel-title">Einstein & Eddington</h3>
+                        <p class="carousel-text"><img src="/assets/icons/calendrier.svg">2008 - Philip Martin</p>
                     </article>
 
-                    <article class="card">
-                        <img src="/assets/img/film4.avif" alt="Illustration carte 4" class="card-img" />
-                        <h3 class="card-title">Genius (Série - Saison 1)</h3>
-                        <p class="card-text"><img src="/assets/icons/calendrier.svg">2017 - Various</p>
+                    <article class="carousel-card">
+                        <img src="/assets/img/film4.avif" alt="Illustration carte 4" class="illustration" />
+                        <h3 class="carousel-title">Genius (Série - Saison 1)</h3>
+                        <p class="carousel-text"><img src="/assets/icons/calendrier.svg">2017 - Various</p>
                     </article>
                 </div>
             </section>
@@ -168,5 +167,7 @@
             <p>© Projet réalisé en 2025 dans le cadre d'un exercice pédagogique au département MMi de Montbéliard</p>
         </div>
     </footer>
+    <script src="/src/js/menu.js"></script>
+    <script src="/src/js/carousel.js"></script>
 </body>
 </html>
