--- a/fr/a-propos.html
+++ b/fr/a-propos.html
@@ -67,13 +67,13 @@
         </section>
 
         <section class="article-section">
-            <h2 class="section-title">Qui suis-je ?</h2>
+            <h2 class="article-title">Qui suis-je ?</h2>
 
             <p>
                 Je suis une étudiante en MMI au département de Montbéliard. Ce projet a été réalisé en 2025 dans le cadre d’un exercice pédagogique autour du thème de l’effet Matilda, qui met en lumière les femmes scientifiques injustement oubliées ou éclipsées par leurs homologues masculins.
             </p>
 
-            <h2 class="section-title">Mon Approche</h2>
+            <h2 class="article-title">Mon Approche</h2>
 
             <p>
                 J’ai choisi de travailler sur Mileva Einstein, une figure fascinante souvent associée à l’effet Matilda. Longtemps restée dans l’ombre d’Albert Einstein, elle aurait contribué à ses premiers travaux sur la relativité, notamment dans la compréhension de l’espace-temps et de la vitesse de la lumière, sans jamais obtenir la reconnaissance qu’elle méritait. À travers ce projet, j’ai voulu réhabiliter son rôle et questionner la manière dont l’histoire de la science invisibilise les femmes.
@@ -85,12 +85,9 @@
         </section>
 
         <section class="content">
-            <h2 class="section-title">Autres projets</h2>
-
-            <p>Des femmes scientifiques dont les contributions ont été attribuées à des hommes</p>
-
+            <h2 class="content-title">Autres projets</h2>
             <div class="project-container">
-                <img src="/assets/img/project1.avif" alt="Illustration carte 1" class="card-img" />
+                <img src="/assets/img/project1.avif" alt="Illustration carte 1" class="project-img" />
                 <h3 class="card-title">Anning Coast</h3>
                 <div class="project-item">
                     <hr>
