--- a/fr/glossaire.html
+++ b/fr/glossaire.html
@@ -57,7 +57,7 @@
     <main>
         <div class="hero">
             <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
-                Retour à l'accueil <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" />
+                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
             </a>
         </div>
 
@@ -66,69 +66,79 @@
             <p class="subtitle">Définitions des termes scientifiques et historiques utilisés dans ce site.</p>
         </section>
 
-        <section class="content">
-            <h2 class="section-title">Physique Théorique</h2>
-            <div class="cards-container" aria-label="Lien entre Mileva Einstein et les mathématiques complexes">
-                <h3 class="card-title">Relativité Restreinte</h3>
-                <p>
-                    Théorie physique développée en 1905 qui unifie l'espace et le temps en un continuum quadridimensionnel appelé espace-temps. Elle repose sur deux postulats : les lois de la physique sont les mêmes dans tous les référentiels inertiels, et la vitesse de la lumière dans le vide est constante pour tous les observateurs.
-                </p>
-                <hr>
-                <p>Source :</p>
-                <a href="https://fr.wikipedia.org/wiki/Relativit%C3%A9_restreinte" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
-                    Relativité restreinte - Wikipédia
-                </a>
+        <section class="article-section">
+            <h2 class="article-title">Physique Théorique</h2>
+            <div class="cards-container">
+                <div class="card">
+                    <h3 class="card-title">Relativité Restreinte</h3>
+                    <p>
+                        Théorie physique développée en 1905 qui unifie l'espace et le temps en un continuum quadridimensionnel appelé espace-temps. Elle repose sur deux postulats : les lois de la physique sont les mêmes dans tous les référentiels inertiels, et la vitesse de la lumière dans le vide est constante pour tous les observateurs.
+                    </p>
+                    <hr>
+                    <p>Source :</p>
+                    <a href="https://fr.wikipedia.org/wiki/Relativit%C3%A9_restreinte" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
+                        Relativité restreinte - Wikipédia
+                    </a>
+                </div>
             </div>
 
-            <div class="cards-container" aria-label="Lien entre Mileva Einstein et les mathématiques complexes">
-                <h3 class="card-title">Espace-Temps</h3>
-                <p>
-                    Continuum à quatre dimensions (trois dimensions spatiales et une dimension temporelle) dans lequel se déroulent tous les événements physiques. Concept central de la relativité restreinte et générale, l'espace-temps remplace la vision newtonienne d'un espace et d'un temps absolus et séparés.
-                </p>
-                <hr>
-                <p>Source :</p>
-                <a href="https://fr.wikipedia.org/wiki/Espace-temps" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
-                    Espace-Temps  - Wikipédia
-                </a>
+            <div class="cards-container">
+                <div class="card">
+                    <h3 class="card-title">Espace-Temps</h3>
+                    <p>
+                        Continuum à quatre dimensions (trois dimensions spatiales et une dimension temporelle) dans lequel se déroulent tous les événements physiques. Concept central de la relativité restreinte et générale, l'espace-temps remplace la vision newtonienne d'un espace et d'un temps absolus et séparés.
+                    </p>
+                    <hr>
+                    <p>Source :</p>
+                    <a href="https://fr.wikipedia.org/wiki/Espace-temps" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
+                        Espace-Temps - Wikipédia
+                    </a>
+                </div>
             </div>
 
-            <div class="cards-container" aria-label="Lien entre Mileva Einstein et les mathématiques complexes">
-                <h3 class="card-title">Transformations de Lorentz</h3>
-                <p>
-                    Ensemble d'équations mathématiques qui décrivent comment les coordonnées spatiales et temporelles d'un événement changent d'un référentiel inertiel à un autre. Ces transformations, développées par Hendrik Lorentz, sont fondamentales pour la relativité restreinte et remplacent les transformations galiléennes classiques.
-                </p>
-                <hr>
-                <p>Source :</p>
-                <a href="https://fr.wikipedia.org/wiki/Transformations_de_Lorentz" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
-                    Transformation de Lorentz  - Wikipédia
-                </a>
+            <div class="cards-container">
+                <div class="card">
+                    <h3 class="card-title">Transformations de Lorentz</h3>
+                    <p>
+                        Ensemble d'équations mathématiques qui décrivent comment les coordonnées spatiales et temporelles d'un événement changent d'un référentiel inertiel à un autre. Ces transformations, développées par Hendrik Lorentz, sont fondamentales pour la relativité restreinte et remplacent les transformations galiléennes classiques.
+                    </p>
+                    <hr>
+                    <p>Source :</p>
+                    <a href="https://fr.wikipedia.org/wiki/Transformations_de_Lorentz" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
+                        Transformations de Lorentz - Wikipédia
+                    </a>
+                </div>
             </div>
 
-            <div class="cards-container" aria-label="Lien entre Mileva Einstein et les mathématiques complexes">
-                <h3 class="card-title">Vitesse de la Lumière</h3>
-                <p>
-                    Constante universelle notée "c", égale à 299 792 458 mètres par seconde dans le vide. C'est la vitesse maximale à laquelle l'information et la matière peuvent se déplacer dans l'univers. Sa constance dans tous les référentiels inertiels est l'un des postulats fondamentaux de la relativité restreinte.
-                </p>
-                <hr>
-                <p>Source :</p>
-                <a href="https://fr.wikipedia.org/wiki/Vitesse_de_la_lumi%C3%A8re" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
-                    Vitesse de la Lumière - Wikipédia
-                </a>
+            <div class="cards-container">
+                <div class="card">
+                    <h3 class="card-title">Vitesse de la Lumière</h3>
+                    <p>
+                        Constante universelle notée "c", égale à 299 792 458 mètres par seconde dans le vide. C'est la vitesse maximale à laquelle l'information et la matière peuvent se déplacer dans l'univers. Sa constance dans tous les référentiels inertiels est l'un des postulats fondamentaux de la relativité restreinte.
+                    </p>
+                    <hr>
+                    <p>Source :</p>
+                    <a href="https://fr.wikipedia.org/wiki/Vitesse_de_la_lumi%C3%A8re" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
+                        Vitesse de la Lumière - Wikipédia
+                    </a>
+                </div>
             </div>
         </section>
 
-        <section class="article-section">
-            <h2 class="section-title">Histoire des Sciences</h2>
-            <div class="cards-container" aria-label="Lien entre Mileva Einstein et les mathématiques complexes">
-                <h3 class="card-title">Effet Matthieu</h3>
-                <p>
-                    Biais de déni ou de minimisation systématique de la contribution des femmes scientifiques à la recherche, dont le travail est souvent attribué à leurs collègues masculins. Nommé par l'historienne Margaret W. Rossiter en 1993 en hommage à Matilda Joslyn Gage.
-                </p>
-                <hr>
-                <p>Source :</p>
-                <a href="https://fr.wikipedia.org/wiki/Effet_Matthieu" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
-                    Effet Matthieu - Wikipédia
-                </a>
+        <section class="physics-theory">
+            <h2 class="content-title">Histoire des Sciences</h2>
+            <div class="cards-container">
+                <div class="card">
+                    <h3 class="card-title">Effet Matthieu</h3>
+                    <p>
+                        Biais de déni ou de minimisation systématique de la contribution des femmes scientifiques à la recherche, dont le travail est souvent attribué à leurs collègues masculins. Nommé par l'historienne Margaret W. Rossiter en 1993 en hommage à Matilda Joslyn Gage.
+                    </p>
+                    <hr>
+                    <p>Source :</p>
+                    <a href="https://fr.wikipedia.org/wiki/Effet_Matthieu" class="card-link" aria-label="Lien page Wikipédia" target="_blank" rel="noopener">
+                        Effet Matthieu - Wikipédia
+                    </a>
+                </div>
             </div>
         </section>
         
