--- a/fr/theorie.html
+++ b/fr/theorie.html
@@ -152,7 +152,7 @@
                 <p class="footer-nav-title">Liens utiles</p>
                 <ul class="footer-nav-list">
                     <li><a href="/fr/a-propos.html" class="footer-nav-link">À propos</a></li>
-                    <li><a href="/fr/artistes.html" class="footer-nav-link">Mentions Légales</a></li>
+                    <li><a href="/" class="footer-nav-link">Mentions Légales</a></li>
                     <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossaire</a></li>
                     <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
