--- a/fr/contact.html
+++ b/fr/contact.html
@@ -45,10 +45,15 @@
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
                 <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
+                <hr>
                 <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
+                <hr>
                 <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
+                <hr>
                 <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
-                <li><a href="/fr/livre.html" class="nav-link">L’Espace-Temps, Jeaun-Paul Auffray</a></li>
+                <hr>
+                <li><a href="/fr/livre.html" class="nav-link">L'Espace-Temps, Jean-Paul Auffray</a></li>
+                <hr>
                 <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
             </ul>
         </nav>
@@ -133,5 +138,6 @@
             <p>© Projet réalisé en 2025 dans le cadre d'un exercice pédagogique au département MMi de Montbéliard</p>
         </div>
     </footer>
+    <script src="/src/js/menu.js"></script>
 </body>
 </html>
