--- a/index.html
+++ b/index.html
@@ -44,10 +44,15 @@
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
                 <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
+                <hr>
                 <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
+                <hr>
                 <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
+                <hr>
                 <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
-                <li><a href="/fr/livre.html" class="nav-link">L’Espace-Temps, Jeaun-Paul Auffray</a></li>
+                <hr>
+                <li><a href="/fr/livre.html" class="nav-link">L'Espace-Temps, Jean-Paul Auffray</a></li>
+                <hr>
                 <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
             </ul>
         </nav>
@@ -77,7 +82,7 @@
                 </a>
                 <a href="/fr/livre.html" class="card">
                     <img src="assets/icons/livre.svg" alt="Livre" loading="lazy" />
-                    <h3 class="card-title">L’Espace-Temps de Jeaun-Paul Auffray</h3>
+                    <h3 class="card-title">L'Espace-Temps de Jean-Paul Auffray</h3>
                     <p>Découvrez "L'Espace-Temps" de Jean-Paul Auffray, un ouvrage de vulgarisation scientifique qui explore les concepts fondamentaux de la relativité et met en lumière les contributions de Mileva Einstein.</p>
                     <p class="card-button">Lire l'article <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></p>
                 </a>
@@ -135,5 +140,6 @@
             <p>© Projet réalisé en 2025 dans le cadre d'un exercice pédagogique au département MMi de Montbéliard</p>
         </div>
     </footer>
+    <script src="/src/js/menu.js"></script>
 </body>
 </html>
