--- a/fr/film.html
+++ b/fr/film.html
@@ -46,10 +46,15 @@
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
                 <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
+                <hr>
                 <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
+                <hr>
                 <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
+                <hr>
                 <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
-                <li><a href="/fr/livre.html" class="nav-link">L’Espace-Temps, Jeaun-Paul Auffray</a></li>
+                <hr>
+                <li><a href="/fr/livre.html" class="nav-link">L'Espace-Temps, Jean-Paul Auffray</a></li>
+                <hr>
                 <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
             </ul>
         </nav>
@@ -65,6 +70,8 @@
         <section class="introduction">
             <h1 class="title">Retour vers le Futur</h1>
         </section>
+
+        <p class="section-separator">∑∫∂∇π∞</p>
 
         <section class="article-section">
             <h2 class="article-title">Bande d'annonce</h2>
