--- a/fr/theorie.html
+++ b/fr/theorie.html
@@ -59,10 +59,11 @@
     </header>
 
     <main>
-        <div class="hero">
+        <div class="hero has-button">
             <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
                 <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
             </a>
+            <img src="/assets/img/science.avif" class="mileva" loading="lazy" />
         </div>
 
         <section class="introduction">
